--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bootstrap": "^5.1.3",
+    "embla-carousel-react": "^6.1.0",
     "next": "12.0.8",
     "react": "17.0.2",
+    "react-bootstrap": "^2.1.1",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
