--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.7.1",
     "bootstrap": "^5.1.3",
     "embla-carousel-react": "^6.1.0",
     "next": "12.0.8",
     "react": "17.0.2",
     "react-bootstrap": "^2.1.1",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-redux": "^7.2.6"
   },
   "devDependencies": {
     "eslint": "8.7.0",
